--- a/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
+++ b/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
@@ -30,7 +30,7 @@
                 }
                 else
                 {
-                    <p>There is no companies connected to this country</p>
+                    <p class="text-muted">There is no companies connected to this country</p>
                 }
             </dd>
         </dl>
