--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
@@ -34,7 +34,7 @@
 
     <div class="form-group" style="margin-top: 15px;">
 
-        <label asp-for="StatusId" class="control-label">Status</label>
+        <label asp-for="StatusId" class="control-label"><span style="color:red;">*</span> Status</label>
         @if (ViewBag.StatusDTOs != null)
         {
 
