--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -82,7 +82,7 @@
             {
                 <dt class="col-sm-2">CV Attachment:</dt>
                 <dd class="col-sm-10">
-                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Download CV"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
                 </dd>
             }
             else
