--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -29,8 +29,8 @@
             {
                 <dt class="col-sm-2">CV Attachment:</dt>
                 <dd class="col-sm-10">
-                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId" class="btn btn-link">
-                        <i class="bx bxs-cloud-download" style="font-size: x-large;"></i> Download CV
+                    <a style="margin-left:-23px;" asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Download CV">
+                        <i class="bx bxs-cloud-download" style="font-size: x-large;"></i>
                     </a>
                 </dd>
             }
