--- a/CMS/CMS.Web/Views/Company/Details.cshtml
+++ b/CMS/CMS.Web/Views/Company/Details.cshtml
@@ -22,7 +22,7 @@
             else
             {
                 <dt class="col-sm-2">Person Name:</dt>
-                <dd class="col-sm-10">There is no person name to contact.</dd>
+                <dd class="col-sm-10 text-muted">There is no person name to contact.</dd>
             }
 
             @if (Model.Email != null)
@@ -33,7 +33,7 @@
             else
             {
                 <dt class="col-sm-2">Email:</dt>
-                <dd class="col-sm-10">There is no Email to contact.</dd>
+                <dd class="col-sm-10 text-muted">There is no Email to contact.</dd>
             }
 
             @if (Model.PhoneNumber != null)
@@ -44,7 +44,7 @@
             else
             {
                 <dt class="col-sm-2">Phone Number:</dt>
-                <dd class="col-sm-10">There is no Phone Number to contact.</dd>
+                <dd class="col-sm-10 text-muted">There is no Phone Number to contact.</dd>
             }
 
         </dl>
