--- a/CMS/CMS.Web/Views/Country/ConfirmDelete.cshtml
+++ b/CMS/CMS.Web/Views/Country/ConfirmDelete.cshtml
@@ -64,7 +64,27 @@
             <dt class="col-sm-2">Country Name</dt>
             <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
         </dl>
+        <dl class="row">
+            <dt class="col-sm-2">Companies Name:</dt>
+            <dd class="col-sm-10">
+                @if (Model.companyDTOs.Any())
+                {
+                    @foreach (var com in Model.companyDTOs)
+                    {
+                        @com.Name
 
+                        @if (com != Model.companyDTOs.Last())
+                        {
+                            @(",  ")
+                        }
+                    }
+                }
+                else
+                {
+                    <p class="text-muted">There is no companies connected to this country</p>
+                }
+            </dd>
+        </dl>
         <form method="post" asp-action="DeleteCountry" asp-route-id="@Model.Id" class="form-group">
             <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
             <a asp-action="GetCountries" class="btn btn-secondary">Back to List</a>
