--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -18,9 +18,11 @@
 
 <div class="row">
 
+    
     <div class="col-md-4">
         <div class="card card-animate">
             <div class="card-body">
+
                 <div class="d-flex justify-content-between">
                     <div>
                         <p class="fw-medium text-muted mb-0">Candidates</p>
@@ -33,6 +35,7 @@
                             </span>
                         </div>  
                     </div> *@
+                    
                     <div>
                         <div class="avatar-sm flex-shrink-0">
                             <span class="avatar-title bg-info-subtle rounded-circle fs-2">
@@ -41,9 +44,13 @@
                         </div>
                     </div>
                 </div>
+
             </div><!-- end card body -->
         </div> <!-- end card-->
     </div>
+    
+
+
     <div class="col-xl-4 col-md-4">
         <div class="card card-animate overflow-hidden">
             <div class="position-absolute start-0" style="z-index: 0;">
@@ -58,6 +65,7 @@
                 </svg>
             </div>
             <div class="card-body" style="z-index:1 ;">
+                <a asp-action="AcceptedCandidates">
                 <div class="d-flex align-items-center">
                     <div class="flex-grow-1 overflow-hidden">
                         <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> Accepted</p>
@@ -65,6 +73,8 @@
                     </div>
                     <div id="accepted-chart" data-percent="@ViewBag.AcceptedPercentage"></div>
                 </div>
+
+                </a>
             </div><!-- end card body -->
         </div><!-- end card -->
     </div>
@@ -85,6 +95,7 @@
                 </svg>
             </div>
             <div class="card-body" style="z-index:1 ;">
+                <a asp-action="PendingCandidates">
                 <div class="d-flex align-items-center">
                     <div class="flex-grow-1 overflow-hidden">
                         <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> Pending</p>
@@ -92,6 +103,7 @@
                     </div>
                     <div id="pending-chart" data-percent="@ViewBag.PendingPercentage"></div>
                 </div>
+                </a>
             </div><!-- end card body -->
         </div><!-- end card -->
     </div>
@@ -113,6 +125,7 @@
                 </svg>
             </div>
             <div class="card-body" style="z-index:1 ;">
+                <a asp-action="RejectedCandidates">
                 <div class="d-flex align-items-center">
                     <div class="flex-grow-1 overflow-hidden">
                         <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> Rejected</p>
@@ -120,6 +133,7 @@
                     </div>
                     <div id="rejected-chart" data-percent="@ViewBag.RejectedPercentage"></div>
                 </div>
+                </a>
             </div><!-- end card body -->
         </div><!-- end card -->
     </div>
@@ -139,6 +153,7 @@
                 </svg>
             </div>
             <div class="card-body" style="z-index:1 ;">
+                <a asp-action="OnHoldCandidates">
                 <div class="d-flex align-items-center">
                     <div class="flex-grow-1 overflow-hidden">
                         <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> On Hold</p>
@@ -146,6 +161,7 @@
                     </div>
                     <div id="onhold-chart" data-percent="@ViewBag.OnHoldPercentage"></div>
                 </div>
+                </a>
             </div><!-- end card body -->
         </div><!-- end card -->
     </div>
