--- a/CMS/CMS.Web/Views/Interviews/StopCycle.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/StopCycle.cshtml
@@ -56,8 +56,8 @@
             if (!note) {
                 // Show SweetAlert error message
                 Swal.fire({
-                    title: 'Error',
-                    text: 'Note is required.',
+                    title: 'Required',
+                    text: 'Please add a note explaining why you want to stop the cycle.',
                     icon: 'error',
                     confirmButtonColor: '#3085d6',
                     confirmButtonText: 'OK'
