--- a/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.NotificationsDTO>
 
+@{
+    ViewData["Title"] = "Notifications";
+}
 
-<h1>Notifications</h1>
 
 <div class="row">
     <div class="col-lg-12">
