--- a/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.NotificationsDTO>
 
-
-<h1>Notifications</h1>
-
+@{
+    ViewData["Title"] = "Notifications";
+}
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
