--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -52,6 +52,10 @@
             padding: 10px 20px;
             cursor: pointer;
         }
+
+    .text-mute {
+        color: #6c757d;
+    }
 </style>
 
 
@@ -74,8 +78,46 @@
             <dd class="col-sm-10" hidden>@Html.DisplayFor(model => model.ParentId)</dd>
             <dt class="col-sm-2">Status:</dt>
             <dd class="col-sm-10">@Html.DisplayFor(model => model.StatusName)</dd>
-            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Notes)</dt>
-            <dd class="col-sm-10">@Html.DisplayFor(model => model.Notes)</dd>
+
+            @if (Model.Notes != null)
+            {
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Notes)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Notes)</dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Notes)</dt>
+                <dd class="col-sm-10 text-mute">No note added</dd>
+            }
+
+            @if (Model.StopCycleNote != null)
+            {
+                <dt class="col-sm-2">Stop Cycle Note:</dt>
+                <dd class="col-sm-10">@Model.StopCycleNote</dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">Stop Cycle Note:</dt>
+                <dd class="col-sm-10 text-mute">No note added</dd>
+
+            }
+
+            @if (Model.CandidateCVAttachmentId != null)
+            {
+                <dt class="col-sm-2" style="margin-top: 8px;">CV Attachment:</dt>
+                <dd class="col-sm-10" style="margin-top: 6px;">
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CandidateCVAttachmentId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Download CV"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
+                </dd>
+            }
+            else
+            {
+                <dt class="col-sm-2" style="margin-top: 8px;">CV Attachment:</dt>
+                <dd class="col-sm-10 text-mute" style="margin-top: 6px;">
+                    CV not added for<br />
+                    this candidate
+                </dd>
+            }
+
         </dl>
 
         <form asp-action="Delete" class="form-group">
