--- a/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
@@ -13,7 +13,7 @@
                     <button class="btn btn-primary" id="readAllButton" >Mark as Read</button>
                 </div>
 
-<table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+<table id="add-rows" class="table" style="width:100%">
     <thead>
         <tr>
 
