--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -8,6 +8,7 @@
         "/dashboard-js/rejected-chart.js",
         "/dashboard-js/pending-chart.js",
         "/dashboard-js/onHold-chart.js",
+        "/dashboard-js/stoppedCycles-chart.js",
         "/theme/libs/jsvectormap/js/jsvectormap.min.js",
         "/theme/libs/jsvectormap/maps/world-merc.js",
         "/dashboard-js/countries-hash.js",
@@ -165,6 +166,36 @@
             </div><!-- end card body -->
         </div><!-- end card -->
     </div>
+
+
+    <div class="col-xl-4 col-md-4">
+        <div class="card card-animate overflow-hidden">
+            <div class="position-absolute start-0" style="z-index: 0;">
+                <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120" width="200" height="120">
+                    <style>
+                        .s0 {
+                            opacity: .05;
+                            fill: var(--vz-success)
+                        }
+                    </style>
+                    <path id="Shape 8" class="s0" d="m189.5-25.8c0 0 20.1 46.2-26.7 71.4 0 0-60 15.4-62.3 65.3-2.2 49.8-50.6 59.3-57.8 61.5-7.2 2.3-60.8 0-60.8 0l-11.9-199.4z"></path>
+                </svg>
+            </div>
+            <div class="card-body" style="z-index:1 ;">
+                <a asp-action="StoppedCyclesCandidates">
+                <div class="d-flex align-items-center">
+                    <div class="flex-grow-1 overflow-hidden">
+                        <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> Stopped Cycles</p>
+                        <h4 class="fs-22 fw-semibold ff-secondary mb-0"><span class="counter-value" data-target="@Model.NumberOfStoppedCycles">0</span></h4>
+                    </div>
+                        <div id="stoppedCycles-chart" data-percent="@ViewBag.StoppedCycles"></div>
+                </div>
+                </a>
+            </div><!-- end card body -->
+        </div><!-- end card -->
+    </div>
+
+
 @*     <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
  *@
 </div>
