--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -25,7 +25,7 @@
 
 
 
-@using (Html.BeginForm("Index", "Interviews", FormMethod.Get))
+@using (Html.BeginForm("Index", "Interviews", FormMethod.Get, new { id = "filterForm", onsubmit = "return validateForm();" }))
 {
     <div class="form-group" style="margin-bottom: 23px;">
         <div class="row">
@@ -33,11 +33,12 @@
                 @Html.Label("Filter by Status:")
                 @Html.DropDownList("statusFilter", ViewBag.StatusList as SelectList, "All Statuses", new { @class = "form-control" })
             </div>
-            
+
             <div class="col-md-3">
                 @Html.Label("Filter by Candidate Name:")
-                <input type="text" id="candidateFilter" name="candidateFilter" class="form-control" placeholder="Search by Candidate Name">
+                <input type="text" id="candidateFilter" name="candidateFilter" class="form-control" placeholder="Search by Candidate Name" value="@ViewBag.candidateFilter">
             </div>
+
 
             <div class="col-md-3">
                 @Html.Label("Filter by Track:")
@@ -95,9 +96,15 @@
                     </thead>
                     <tbody>
                         @if (Model != null)
-                            @for (var i = 0; i < Model.Count(); i++)
+                        {
+                            // Sort the interviews by CreatedOn date in descending order
+                            var sortedInterviews = Model.OrderByDescending(x => x.CreatedOn).ToList();
+
+                            // Loop through the sorted interviews
+                            for (var i = 0; i < sortedInterviews.Count(); i++)
                             {
-                                var item = Model.ElementAt(i);
+                                var item = sortedInterviews[i];
+
                                 <tr>
                                     <td>@(i + 1)</td>
                                     <td>@Html.DisplayFor(modelItem => item.FullName)</td>
@@ -178,6 +185,7 @@
 
                                 </tr>
                             }
+                        }
                     </tbody>
                 </table>
 
@@ -203,4 +211,17 @@
         });
     });
 </script>
-    
+<script>
+    // Function to remove trailing spaces from candidate name input field
+    function removeTrailingSpaces() {
+        var candidateFilter = document.getElementById("candidateFilter");
+        candidateFilter.value = candidateFilter.value.trim(); // Remove trailing spaces
+    }
+
+    // Validate form and remove trailing spaces before submission
+    function validateForm() {
+        removeTrailingSpaces(); // Remove trailing spaces from candidate name
+        // Return true to allow form submission
+        return true;
+    }
+</script>
