--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -11,7 +11,7 @@
     <input type="hidden" asp-for="CandidateId" />
     <input type="hidden" asp-for="PositionId" />
     <input type="hidden" asp-for="isUpdated" />
-    @if (User.IsInRole("Interviewer"))
+    @if ((User.IsInRole("Interviewer") || User.IsInRole("Solution Architecture")) && Model.ParentId == null)
     {
         <div class="form-group">
             <label asp-for="Score"><span class="text-danger">*</span> Score out of 5:</label>
@@ -60,7 +60,7 @@
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
 
-    @if (User.IsInRole("Interviewer")  && Model.ParentId == null)
+    @if ((User.IsInRole("Interviewer") || User.IsInRole("Solution Architecture")) && Model.ParentId == null)
     {
         @if (Model.EvalutaionFormId != null)
         {
@@ -77,7 +77,7 @@
         }
 
         <div class="form-group" style="margin-top: 15px;">
-            <label for="file"><span class="text-danger">*</span> Upload An evaluation:</label>
+            <label for="file">Upload An evaluation:</label>
             <input type="file" id="file" name="file" class="form-control-file" onchange="validateFileFormat(this)" />
             <br>
             <span asp-validation-for="AttachmentId" class="text-danger"></span>
@@ -131,7 +131,7 @@
 
             // Validate Notes (if StatusId is 3)
             if ($('[name="StatusId"]').val() === "3" && !$('[name="Notes"]').val()) {
-                $('#Notes').next(".text-danger").text("Please add a note for why it was rejected.");
+                $('#Notes').next(".text-danger").text("Please add a note for why (He/She) was rejected.");
                 return;
             }
 
@@ -145,6 +145,12 @@
             if ($('[name="Score"]').is(":visible")) {
                 var scoreValue = $('[name="Score"]').val();
 
+                // Check if the status is "2" and score is less than 3
+                if ($('[name="StatusId"]').val() === "2" && scoreValue < 3) {
+                    $('#Score').next(".text-danger").text("Score should not be less than 3.");
+                    return;
+                }
+
                 // Check if the score is not empty and is not a valid number
                 if (!scoreValue || !isNumeric(scoreValue)) {
                     $('#Score').next(".text-danger").text("Score must be a valid number.");
@@ -157,6 +163,7 @@
                     return;
                 }
             }
+
 
 
             // Use SweetAlert2 for confirmation
