--- a/CMS/CMS.Web/Views/Notifications/IndexArchinotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexArchinotification.cshtml
@@ -7,7 +7,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+                <table id="add-rows" class="table" style="width:100%">
                     <thead>
                         <tr>
 
