Added 2 tabs in the notifications "UnRead" and "All"

--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -62,7 +62,7 @@
         <dt class="col-sm-2">Title:</dt>
         <dd class="col-sm-10">@Html.Raw(Model.Title)</dd>
 
-        <dt class="col-sm-2">Body Description:</dt>
+        <dt class="col-sm-2">Description:</dt>
         <dd class="col-sm-10">@Html.Raw(Model.BodyDesc)</dd>
     </dl>
 
