--- a/CMS/CMS.Web/Views/Notifications/IndexGMnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexGMnotification.cshtml
@@ -3,49 +3,179 @@
 @{
     ViewData["Title"] = "Notifications";
 }
+
+
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <table id="add-rows" class="table" style="width:100%">
-                    <thead>
-                        <tr>
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="unread-tab" data-bs-toggle="tab" data-bs-target="#unread" type="button" role="tab" aria-controls="unread" aria-selected="true">Unread</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab" aria-controls="all" aria-selected="false">All</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="unread" role="tabpanel" aria-labelledby="unread-tab">
+              
+                        <table id="add-rows" class="table" style="width:100%">
+                            <thead>
+                                <tr>
 
-                            <th>
-                                @Html.DisplayNameFor(model => model.Title)
-                            </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Title)
+                                    </th>
 
-                            <th>Sent Date</th>
+                                    <th>Sent Date</th>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var notification in Model.Reverse())
-                        {
-                            <tr>
-
-
-                                <td>
-                                    <a  href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
-                                        <span style="@(notification.IsRead ? "color: blue;" : "font-weight: bold; color: black;")">
-                                            @Html.Raw(notification.Title)
-                                        </span>
-                                    </a>
-                                </td>
-
-                                <td>@notification.SendDate</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model.Count() == 0)
+                                {
+                                    <tr>
+                                        <td colspan="2" class="text-center">No notifications found</td>
+                                    </tr>
+                                }
+                                else
+                                {
+                                @foreach (var notification in Model.Reverse())
+                                {
+                                    <tr>
 
 
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+                                        <td>
+                                            <a href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
+                                                <span style="@(notification.IsRead ? "color: blue;" : "font-weight: bold; color: black;")">
+                                                    @Html.Raw(notification.Title)
+                                                </span>
+                                            </a>
+
+                                        </td>
+
+                                        <td>@notification.SendDate</td>
+
+
+                                    </tr>
+                                }}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="tab-pane fade" id="all" role="tabpanel" aria-labelledby="all-tab">
+                        <table id="add-rows" class="table" style="width:100%">
+                            <thead>
+                                <tr>
+
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Title)
+                                    </th>
+
+                                    <th>Sent Date</th>
+
+                                </tr>
+                            </thead>
+                            <tbody id="all-notifications-content">
+                                @if (Model.Count() == 0)
+                                {
+                                    <tr>
+                                        <td colspan="2" class="text-center">No notifications found</td>
+                                    </tr>
+                                }
+                                else
+                                {
+                                @foreach (var notification in Model.Reverse())
+                                {
+                                    <tr>
+
+
+                                        <td>
+                                            <a href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
+                                                <span style="@(notification.IsRead ? "color: blue;" : "font-weight: bold; color: black;")">
+                                                    @Html.Raw(notification.Title)
+                                                </span>
+                                            </a>
+
+                                        </td>
+
+                                        <td>@notification.SendDate</td>
+
+
+                                    </tr>
+                                }}
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </div>
 </div>
 
 
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
+<!-- SweetAlert2 CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+<script>
+    $(document).ready(function () {
+
+        $("#all-tab").click(function () {
+            $.ajax({
+                url: '@Url.Action("AllNotifications", "Notifications")',
+                type: 'GET',
+                success: function (response) {
+                    var tBodyContent = "";
+                    $('#all-notifications-content').html("");
+                    // Delay the reload for 2 seconds (adjust as needed)
+                    response.forEach(notification => {
+                        debugger;
+                        var fontStyle = notification.isRead ? "color: blue;" : "font-weight: bold; color: black;";
+                        var sendDate = new Date(notification.sendDate);
+                        var formattedDate = sendDate.toLocaleDateString();
+                        var formattedTime = sendDate.toLocaleTimeString();
+
+                        // Prepare the all notifications grid body content
+                        var htmlCode = tBodyContent;
+                        tBodyContent = htmlCode.concat(`<tr>
+                                                      <td>
+                                                          <a href="/Notifications/Details/`+ notification.notificationsId + `">
+                                                                  <span style="`+ fontStyle + `">
+                                                                      `+ notification.title + `
+                                                              </span>
+                                                          </a>
+                                                      </td>
+                                                          <td>${formattedDate} ${formattedTime}</td>
+                                                  </tr>`)
+                    })
+
+                    $('#all-notifications-content').html(tBodyContent);
+
+                },
+                error: function (xhr, status, error) {
+                    console.error("Error marking all as read: " + error);
+
+                    // Show SweetAlert2 error notification
+                    Swal.fire({
+                        title: 'Error!',
+                        text: 'Failed to load all notifications.',
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    });
+                }
+            });
+        });
+
+    });
+</script>
 
 
